# opt_j2v8

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_eclipsesource_v8_V8Impl.cpp  snap_blob.h  snap_blob32.h
app/src/main/cpp/v8.out/include/: v8-isolate.h
app/src/main/java/com/eclipsesource/v8/: V8.java
app/src/test/java/com/eclipsesource/v8/demo/: ExampleUnitTest.kt
demo/: build.gradle
demo/src/androidTest/java/com/eclipsesource/v8/demo/: ExampleInstrumentedTest.kt
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/eclipsesource/v8/demo/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/menu/: menu_main.xml
demo/src/main/res/navigation/: nav_graph.xml
demo/src/main/res/values/: themes.xml
demo/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
